--- a/itsc1110/styles/default.css
+++ b/itsc1110/styles/default.css
@@ -23,11 +23,14 @@ header {
     text-align: center;
 }
 
-footer {
+footer{
     text-align: center;
+    border-top-style: solid;
+    border-width: 1px;
+    border-color:#e0e1dd;
 }
 
-figure{
+figure {
     text-align: center;
 }
 
@@ -38,4 +41,11 @@ figcaption {
 a {
     text-align: center;
     color: #415A77;
+}
+
+main {
+    border-top-style: solid;
+    border-width: 1px;
+    border-color: #e0e1dd;
+    margin-top: 10px;
 }
